# ppi

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.md  usage.md
docs/source/notebooks/: tutorial.ipynb
notebooks/: ppi.ipynb  test_ppi.ipynb  week6.ipynb
src/ppi/: database.py  intact_analyzer.py  main.py
tests/: test_database.py  test_inact_analyzer.py
tests/data/: empty_ppi.tsv  test_ppi.tsv
