[project]
name = "ppi"
version = "0.1.0"
description = ""
authors = [
    {name = "Mehmet Can Ay", email = "s88may@uni-bonn.de"},
]
dependencies = [
    "pandas>=2.1.3",
    "sqlalchemy>=2.0.23",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
]
