[project]
name = "ppi"
version = "0.1.0"
description = ""
authors = [
    {name = "Mehmet Can Ay", email = "s88may@uni-bonn.de"},
]
dependencies = [
    "pandas>=2.1.3",
    "sqlalchemy>=2.0.23",
    "networkx>=3.2.1",
    "matplotlib>=3.8.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
doc = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "pandoc>=2.3",
    "nbsphinx>=0.9.3",
    "ipython>=8.18.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
]
